--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ h1{
     font-size: 50px;
 }
 
+h2{
+
+    font-size: 40px;
+}
+
 .highlights{
 
     color: orange;
@@ -17,7 +22,8 @@ h1{
 
 p{
 
-    text-align: left;
+    
+    color: dimgrey;
 }
 
 .half-width{
@@ -30,19 +36,21 @@ p{
 
 .half-width img{
 
-    width: 75%;
-    margin-left: 25%;
+    width: 100%;
+    
 }
 
 .top-banner{
 
-    background-image: url("images/cubes.jpg");
+    
+    background-image: url("images/top-banner.png");
     background-repeat: no-repeat;
 }
 
-.section{
+section{
 
     height: 500px;
+    padding-bottom: 150px;
 }
 
 .link-button{
@@ -53,5 +61,52 @@ p{
     border-radius: 5px;
     color: black;
     font-weight: 700;
-    padding-top: 5px;
+    
+}
+
+.dream-area{
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+
+
+}
+
+.single-experience{
+
+    box-shadow: 10px 10px 40px grey;
+    border-radius: 5px;
+    height: 80%;
+    background-color: white;
+
+}
+
+.experience-area{
+
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+#full-stack{
+
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightsalmon, tomato);
+    border-image-slice: 1;
+}
+
+#maintainance-web{
+
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice: 1;
+}
+
+footer p {
+
+
+    color: rgb(63, 61, 61);
+    padding-bottom: 5px;
+    text-decoration: none;
+    text-align: center;
 }
