--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ h2{
 
 p{
 
-    
     color: dimgrey;
 }
 
@@ -36,7 +35,7 @@ p{
 
 .half-width img{
 
-    width: 100%;
+    width: 75%;
     
 }
 
@@ -50,7 +49,7 @@ p{
 section{
 
     height: 500px;
-    padding-bottom: 150px;
+    padding-bottom: 70px;
 }
 
 .link-button{
@@ -76,7 +75,7 @@ section{
 
     box-shadow: 10px 10px 40px grey;
     border-radius: 5px;
-    height: 80%;
+    height: 70%;
     background-color: white;
 
 }
@@ -102,10 +101,122 @@ section{
     border-image-slice: 1;
 }
 
+.skills-pro{
+
+    background-image: url("images/idea.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+}
+
+
+.skills-area{
+
+    width: 500px;
+    margin: 25px;
+       
+}
+
+li {
+    position: relative;
+    list-style: none;
+    margin: 50px 0;
+    font-weight: 800;
+    text-transform: uppercase;
+}
+
+li:before {
+    content: "";
+    position: absolute;
+    top: calc(100% + 10px);
+    left: 0;
+    width: 100%;
+    height: 20px;
+    background-color: rgba(54, 126, 223, .5);
+    border-radius: 1000px;
+}
+
+li:after {
+    content: "";
+    position: absolute;
+    top: calc(100% + 10px);
+    left: 0;
+    width: 0;
+    height: 20px;
+    background-color: rgba(54, 126, 223, 1);
+    border-radius: 1000px;
+    animation-duration: .7s;
+    animation-timing-function: ease;
+    animation-fill-mode: forwards;
+}
+
+li.html:after {
+    animation-name: html;
+}
+
+@keyframes html {
+    to {
+        width: 95%;
+    }
+}
+
+li.css:after {
+    animation-name: css;
+}
+
+@keyframes css {
+    to {
+        width: 85%;
+    }
+}
+
+li.js:after {
+    animation-name: js;
+}
+
+@keyframes js {
+    to {
+        width: 80%;
+    }
+}
+
+li.rj:after {
+    animation-name: rj;
+}
+
+@keyframes rj {
+    to {
+        width: 75%;
+    }
+}
+
+li.nj:after {
+    animation-name: rj;
+}
+
+@keyframes nj {
+    to {
+        width: 65%;
+    }
+}
+
+
+li.mb:after {
+    animation-name: mb;
+}
+
+@keyframes mb {
+    to {
+        width: 60%;
+    }
+}
+
 footer p {
 
 
     color: rgb(63, 61, 61);
+    padding-top: 10px;
     padding-bottom: 5px;
     text-decoration: none;
     text-align: center;
